--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <option value="default">Standaard</option>
                 <option value="blauw">Blauw</option>
                 <option value="rood">Rood</option>
+                <option value="voetbal">Voetbal</option>
             </select>
         </div>
 
