--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="overzicht">
-            Auto Clicker:       <span id="upgrades1">0</span>           <span style="color: black;">|</span>
+            Auddddddto Clicker:       <span id="upgrades1">0</span>           <span style="color: black;">|</span>
             Clicker x2:         <span id="upgrades2">0</span>           <span style="color: black;">|</span>
             Koekjes Oven:       <span id="upgrades3">0</span>           <span style="color: black;">|</span>
             Koekjes Bakkerij:   <span id="upgrades4">0</span>           <span style="color: black;">|</span>
