--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section id="pagina1">
             <h2>Over Mij</h2>
             <div class="content">
-                <img src="afbeeldingen/pf.jpg" alt="Thomas de Goeij profielfoto" class="profielfoto">
+                <img src="afbeeldingen/pf2.jpg" alt="Thomas de Goeij profielfoto" class="profielfoto">
                 <p>
                     Als bevlogen en nauwkeurige student aan het Techniek College op niveau mbo 4, heb ik een sterke passie voor ICT en een goede werkinstelling ontwikkeld. Ik ben toegewijd aan het voltooien van mijn taken met de hoogste mate van precisie en kwaliteit. Mijn opleiding heeft mij voorzien van veel kennis en ervaring, waardoor ik goed voorbereid ben op uitdagingen binnen de technische sector.
                 </p>
